# AoC-2024

./: .gitignore  CMakeLists.txt
input/: day_2_debug.txt  day_2_small_debug.txt  day_4_debug.txt  day_5_rules.txt  day_5_updates.txt
src/: CMakeLists.txt  day_1.cpp  day_2.cpp  day_3.cpp  day_4.cpp  day_5.cpp  day_5.hpp  days.cpp  days.hpp  main.cpp
src/test/: CMakeLists.txt  day_5_test.cpp
